--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,9 @@ spring:
     port: 5672
     username: expenses_registry
     password: secret
+  datasource:
+    url: jdbc:mariadb://localhost:3306/expenses_registry
+    username: expenses_registry
+    password: secret
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
